Added snowflake in experience

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 							<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 								<div class="profile-thumb" style="background: url(images/profile_pic.jpg);"></div>
 								<h1><span>Burny</span></h1>
-								<h3><span>Data Consultant</span></h3>
+								<h3><span>Data Engineer</span></h3>
 								<p>
 									<ul class="fh5co-social-icons">
 										<li><a href="mailto:syed.alimurad.tahir@gmail.com"><i class="icon-email"></i></a></li>
@@ -320,6 +320,9 @@
 			<div class="row row-pb-md">
 				<div class="col-md-12 text-center">
 					<h3>Databases and Data Warehouses</h3>
+				</div>
+				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
+					<div class="chart" data-percent="100"><span><strong>Snowflake</strong></span></div>
 				</div>
 				<div class="col-md-3 col-sm-6 col-xs-12 text-center">
 					<div class="chart" data-percent="100"><span><strong>BigQuery</strong></span></div>
