--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center">
 					<h2>Hello! I’m Burny,</h2>
-					<p>I’m a Machine Learning & Data Analytics Engineer with almost four years of experience. My expertise lies in building robust ETL pipelines, data marts, and insightful dashboards tailored for industries like engineering, finance, and more. I’m passionate about transforming complex data into meaningful insights that drive informed decision-making.</p>
+					<p>I’m a Machine Learning & Data Analytics Engineer with more than four years of experience. My expertise lies in building robust ETL pipelines, data marts, and insightful dashboards tailored for industries like engineering, finance, and more. I’m passionate about transforming complex data into meaningful insights that drive informed decision-making.</p>
 					<p>I completed my Master’s degree at TU Berlin, specializing in Machine Learning. During my studies, I developed a range of Machine Learning, Deep Learning, and Generative AI models for real-world applications, tackling challenges with innovative solutions and advancing my skills in data science.</p>
 				</div>
 			</div>
@@ -97,6 +97,18 @@
 					<ul class="timeline">
 						<li class="timeline-heading text-center animate-box">
 							<div><h3>Work Experience</h3></div>
+						</li>
+						<li class="timeline-inverted animate-box">
+							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
+							<div class="timeline-panel">
+								<div class="timeline-heading">
+									<h3 class="timeline-title">Data Analyst</h3>
+									<span class="company">ICE - 06/2025 - Present</span>
+								</div>
+								<div class="timeline-body">
+									<p>Optimized data pipelines and created robust data models in dbt, and performed ad-hoc analysis and reporting using SQL to drive data-informed decisions across various stakeholders.</p>
+								</div>
+							</div>
 						</li>
 						<li class="animate-box timeline-unverted">
 							<div class="timeline-badge"><i class="icon-suitcase"></i></div>
